online-zoo/pages/main/sass/main.scss
@import '../../../../node_modules/swiper/swiper.scss';
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import '_style.scss';


html {
    box-sizing: border-box;
}

*, *::after, *::before {
    box-sizing: inherit;
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
}

ol, ul, li {
    list-style: none;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
}

button{
    padding: 0;
    border: none;
    margin: 0;
    background-color: transparent;
    cursor: pointer;
}

.container{
    max-width: 1160px;
    margin: 0 auto;
    padding: 0;
}

.header{
    position: relative;
    background-color: $black;
}

.header__inner{
    height: 80px;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: start;
}

.logo{
    @extend %displayFlexCenterCeter;
}

.title{
    @extend %fontRobotoH1;
}

.logo__title{
    border: 1px solid $white;
    border-radius: 2px;
    color: $white;
    text-align: center;
    padding: 3.55px 4.75px;
    position: relative;

    &::after {
        content: '';
        background: no-repeat, url(../../../assets/images/bamboo__logo.svg);
        width: 12px;
        height: 20px;
        position: absolute;
        left: 9px;
        bottom: 8px;
    }
}

.navigation{
    margin-left: 67.75px;
}

.burger__icon {
    cursor: pointer;
    display: none;

    @media (max-width: 710px) {
        display: block;
    }
}

.burger {
    background: rgb(0, 0, 0, 0.7);
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0;
    left: -100%;
    z-index: 5;
    transition: left 400ms ease-in-out;
    display: none;

    @media (max-width: 710px) { 
        display: block;
    }
}

.burger--active {
    left: 0;
    
}

.burger__wrap {
    max-width: 100%;
    height: 329px;
    background: #fff;
    z-index: 4;
    padding: 10px 10px;
    position: relative;
}

.close__burger {
    width: 30px;
    height: 30px;
    position: absolute;
    top: 15px;
    right: 15px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.burger__title {
    @extend %burger__link;
    @extend %burger__title;
    border: 1px solid $orange13;
    color: $orange13;
    width:58px;
    height: 36px;
    @extend %displayFlexCenterCeter;
    text-align: center;
    position: relative;
    margin-bottom: 30px;

    &::before {
        content: '';
        background: no-repeat url(../../../assets/images/bamboo__orange.svg);
        width: 10px;
        height: 16px;
        position: absolute;
        bottom: 7px;
        left: 6px
    }
}

.burger__menu {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 15px;

    .burger__item + .burger__item {
        margin-top: 15px;
    }
}

.burger__link {
    @extend %burger__link;
    color: $gray_blue;

    &:hover {
        text-decoration: underline;
    }

    &:active {
        color: $green;
    }
}

.designed__text {
    @extend %burger__link;
    color: $gray_blue;

    &:hover {
        text-decoration: underline;
    }

    &:active {
        color: $green;
    }
}



.navigation__list{
    @extend %displayFlexCenterCeter;
    justify-content: start;
}

.navigation__item + .navigation__item {
    margin-left: 58px;
}

.navigation__link{
    @extend %fontLink;
    color: $white;
    white-space: nowrap;

    &:hover {
        color: $orange13;
    }

    &:active {
        color: $green;
    }
}

.navigation__link--activ {
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
}

.designed{
    margin-left: 438px;
    white-space: nowrap;

    .designed__text{
        @extend %fontLink;
        color: $white;

        &:hover {
            color: $orange13;
        }

        &:active {
            color: $green;
        }
    }
}

.watch {
    margin-top: $headerHeigth;
    background-repeat: no-repeat;
    background-image: url(../../../assets/images/pandaBack.jpg);
    background-size: cover; 
    height: 780px;
    margin-bottom: 140px;
    background-position-x: center;
}

.watch__inner{
    display: flex;
    align-items: flex-end;
    justify-content: end;
    flex-direction: column;
    margin-top: -$headerHeigth;
}

.watch__box{
    display: flex;
    align-items: center;
    justify-content: end;

    &::before {
        background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
        width: 465px;
        height: 465px;
        border-radius: 50%;
        content: '';
        position: absolute;
        left: calc(50% - 465px/2 + 242.5px);
        top: 90px;
        z-index: 1;
    }
}

.watch__title{
    @extend %fontFamilyRoboto;
    font-weight: 700;
    font-size: 106.496px;
    line-height: 75%;
    text-align: center;
    text-transform: uppercase;
    color: $white;
    position: relative;
    z-index: 1;
    margin-top: 86px;
    margin-bottom: 60px;

    .watch__title--orange {
        color: $yellow;
    }
}

.btn {
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    border-radius: 25px;
    width: 298px;
    height: 54px;
}

.watch__btn {
    text-align: center;
    text-transform: uppercase;
    color: $white;
    @extend %font_style_button;
    margin-right: 99px;
    position: relative;
    z-index: 1;
    &:hover {
        background: $orange13;
    }

    &:active {
        background: $green;
        
    }
}

.backstage{
    position: relative;
    margin-bottom: 106px;
}

.backstage__wrap {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    column-gap: 87px;
}

.backstage__title{
    @extend %font_title;
    margin-bottom: 20px;
}
/* ... */

